objects/Joint_Business_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Target_Filled_fields_count__c</fullName>
        <label>Sales Target: Filled fields count</label>
        <summarizedField>Joint_Business_Plan_Product_Lines__c.Filled_fields_count__c</summarizedField>
        <summaryForeignKey>Joint_Business_Plan_Product_Lines__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Target_Results_of_Completeness__c</fullName>
        <description>R6</description>
        <formula>IF (JBP_ProdLine_Rollup__c == 0,0,IF(Sales_Target_Filled_fields_count__c == 0, 0.5, 0.5 + ((Sales_Target_Filled_fields_count__c / (JBP_ProdLine_Rollup__c * VALUE($Label.Sys_Total_Fields_in_Sales_Target_and_Results  ))) / 2) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This percentage is calculated based on the Fields of the Sales Targets associated to this Business Plan. 
These are: BU, Budget Fields, Sales Fields, Run Rate Current Year.</inlineHelpText>
        <label>Sales &amp; Target Results:% of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_and_Warranties_Flag__c</fullName>
        <description>R5- Field to show the Flag</description>
        <formula>IF( After_Sales_and_Warranties_Info__c = &quot;Must Have&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_previous_year__c</fullName>
        <description>R5 - Sales previous year</description>
        <label>Sales previous year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_previous_year_formula__c</fullName>
        <description>R5 - Sales previous year formula</description>
        <formula>Sales_previous_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Previous Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scope_of_the_plan__c</fullName>
        <description>R5</description>
        <inlineHelpText>Geographical scope of the plan, (covers whole country or just this branch office) E.g. &quot;This plan covers all branch offices in Sweden&quot;. Possible text here is printed on cover page of paper print.</inlineHelpText>
        <label>Scope of the plan</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Channel_Class__c</fullName>
        <label>Secondary Channel Class</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date Field</description>
        <inlineHelpText>The date the plan starts to be effective, typically Jan1st of the year</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R5 - Status</description>
        <inlineHelpText>Turn active when content agreed with partner and all mandatory fields are filled. Alternatively send for approval. Change back to draft for updating content that is locked for editing for active plan.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>R5 - Strengths</description>
        <inlineHelpText>Describe the strengths when the partner and ABB are co-operating as described in this plan</inlineHelpText>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Suppliers_complementary_products_Flag__c</fullName>
        <description>R5 - Flag is displayed when Suppliers with complementary products is not filled</description>
        <formula>IF(ISBLANK( Suppliers_with_complementary_products__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppliers_potential_ABB_offering_Flag__c</fullName>
        <description>R5 - Flag is displayed when Suppliers with potential ABB offering is not filled.</description>
        <formula>IF(ISBLANK(  Suppliers_with_potential_ABB_offering__c  ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppliers_with_complementary_products__c</fullName>
        <inlineHelpText>Update the content in section &quot;Existing suppliers/Partners&quot; under MARKET SCOPE</inlineHelpText>
        <label>Suppliers with complementary products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suppliers_with_potential_ABB_offering__c</fullName>
        <inlineHelpText>Update the content in section &quot;Existing suppliers/Partners&quot; under MARKET SCOPE</inlineHelpText>
        <label>Suppliers with potential ABB offering</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_2nd_Year_Formula__c</fullName>
        <description>R5 - Target 2nd Year Formula</description>
        <formula>Target_2nd_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target 2nd Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_2nd_Year__c</fullName>
        <description>R5 - Target 2nd Year</description>
        <label>Target 2nd Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_3rd_Year_Formula__c</fullName>
        <description>R5 - Target 3rd Year Formula</description>
        <formula>Target_3rd_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target 3rd Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_3rd_Year__c</fullName>
        <description>R5 - Target 3rd Year</description>
        <label>Target 3rd Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Targeted_AVP__c</fullName>
        <description>R5 - Targeted AVP</description>
        <formula>Channel_Market_Coverage__r.Targeted_AVP__c</formula>
        <inlineHelpText>Checked if indicated as such in &quot;Market Scope&quot;. Update only from &quot;Market Scope&quot; view.</inlineHelpText>
        <label>Targeted AVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Targeted_Key_Stratergic__c</fullName>
        <description>R5 - Targeted Key Stratergic</description>
        <formula>Channel_Market_Coverage__r.Targeted_Key_Strategic__c</formula>
        <inlineHelpText>Checked if indicated as such in &quot;Market Scope&quot;. Update only from &quot;Market Scope&quot; view.</inlineHelpText>
        <label>Targeted Key Strategic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Count__c</fullName>
        <description>R6: Channel partner business plan team count</description>
        <label>Team Count</label>
        <summaryForeignKey>Joint_Business_Team__c.Joint_Business_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Team_of_Completeness__c</fullName>
        <formula>IF (Team_Count__c &gt;= 1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This percentage will be 100% if at least one Team Member has been associated to the Business Plan.</inlineHelpText>
        <label>Team: % of Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <description>R5 - Threats</description>
        <inlineHelpText>Describe the threats when the partner and ABB are co-operating as described in this plan</inlineHelpText>
        <label>Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Completeness_Rate__c</fullName>
        <description>R6</description>
        <formula>Business_Plan_of_Completeness__c * 0.2 + Team_of_Completeness__c * 0.05 + Contact_Roles_of_Completeness__c * 0.1 + Market_Coverage_of_Completeness__c * 0.1 + Competitors_of_Completeness__c * 0.05 + Sales_Target_Results_of_Completeness__c * 0.25 + Action_of_Completeness__c * 0.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This percentage is calculated based on the weighted percentages of the Completeness Rates of the related Records.</inlineHelpText>
        <label>Total Completeness Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Training_and_Authorization_Plan_Info__c</fullName>
        <description>R5-Filed to populate &quot;Must Have&quot; value</description>
        <label>Training and Authorization Plan Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_and_Authorization_Plan__c</fullName>
        <description>R5-Training and Authorization Plan</description>
        <inlineHelpText>Describe the current authorization status and plan  of the company. Add Actions on action -list for easy follow-up purposes.</inlineHelpText>
        <label>Training and Authorization Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_and_authorization_Plan_Flag__c</fullName>
        <description>R5- Flag update for Must have</description>
        <formula>IF( Training_and_Authorization_Plan_Info__c = &quot;Must Have&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), &quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <description>R5-Vision</description>
        <inlineHelpText>Describe where the partner as a company want to be and what to achieve in 3 and 5 year terms.</inlineHelpText>
        <label>Vision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>R5 - Weaknesses</description>
        <inlineHelpText>Describe the weaknesses when the partner and ABB are co-operating as described in this plan</inlineHelpText>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>XA_Contracts_del__c</fullName>
        <description>R5 Formula field to set up XA Contracts</description>
        <formula>HYPERLINK(&quot;/apex/Apttus__DocumentGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Document&amp;templateType=Channel Partner Business Plans&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)</formula>
        <inlineHelpText>Click GENERATE button to create a standard format file from the content. You can choose between several file formats and languages.</inlineHelpText>
        <label>Print Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Channel_Partner_Business_Plans__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Channel Partner Business Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Channel Partner Business Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Channel_Market_Coverage__c</columns>
        <columns>Primary_Channel_Class__c</columns>
        <columns>ABB_Overview__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All CPBPs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_CPBP</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Channel_Market_Coverage__c</columns>
        <columns>Primary_Channel_Class__c</columns>
        <columns>ABB_Overview__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My CPBPs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Business Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Partner Business Plans</pluralLabel>
    <recordTypes>
        <fullName>Closed_Joint_Business_Plan</fullName>
        <active>true</active>
        <description>R5 - Closed Joint Business Plan</description>
        <label>Closed Channel Business Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributor_as_AVP</fullName>
        <active>true</active>
        <description>Template for distributors (with no technical focus) who is or targets to become an ABB authorized value provider</description>
        <label>3. Distributor as AVP, existing/targeted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributor_as_Partner</fullName>
        <active>true</active>
        <description>Template for distributors, short form. Can be used when the partner is not technical and is not targeting to become Key/Strategic partner or ABB authorized provider during the business planning period</description>
        <label>1. Distributor as Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributor_as_Strategic_Key_Partner</fullName>
        <active>true</active>
        <description>Template for distributors (with no technical focus) who is or targets to become a key- or strategic distributor</description>
        <label>2. Distributor as Strategic/Key Partner, existing/targeted</label>
    </recordTypes>
    <recordTypes>
        <fullName>JointBusinessPlan</fullName>
        <active>true</active>
        <description>R5 Joint Business Plan</description>
        <label>Joint Business Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Channel_as_Key_Strategic_Partner_or_AVP</fullName>
        <active>true</active>
        <description>Template for technical channels (e.g. technical distributors, system integrators, ..) who are or plan to become key- or strategic partners or ABB authorized value providers</description>
        <label>5. Technical Channel as Key/Strategic Partner or AVP, existing/targeted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Channel_as_Partner</fullName>
        <active>true</active>
        <description>Template for technical channels, short form. Can be used when the partner is not targeting to become Key/Strategic partner or ABB authorized provider during the business planning period</description>
        <label>4. Technical Channel as Partner</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Date_for_Next_Review_should_not_be_past</fullName>
        <active>true</active>
        <description>R6: . When save a business plan if the Date for Next Review is in the past an error should be display</description>
        <errorConditionFormula>(ISCHANGED( Status__c) || ISCHANGED(  Assigned_To__c ) || ISCHANGED(Date_for_Next_Review__c)) &amp;&amp; Date_for_Next_Review__c &lt; TODAY() &amp;&amp; NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c) &amp;&amp;
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c)</errorConditionFormula>
        <errorMessage>You can not change the Status / Assigned To/ Date for Next Review field when the  Date for Next Review is in past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_greater_than_Start_Date</fullName>
        <active>true</active>
        <description>R5 - Joint Business Plan End Date must be always greater than Start Date.</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
End_Date__c  &lt;  Start_Date__c )</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be greater than Start Date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JBP_status_change_to_In_Approval</fullName>
        <active>true</active>
        <description>R5 - Validate the required fields are filled out to change status to &quot;In Approval&quot;  or &quot;Closed&quot;</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c) , 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),OR( 
AND(OR(RecordType.DeveloperName = &quot;Distributor_as_AVP&quot;,RecordType.DeveloperName =&quot;Technical_Channel_as_Key_Strategic_Partner_or_AVP&quot;),OR(ISPICKVAL(Status__c, &quot;In Approval&quot;),ISPICKVAL(Status__c, &quot;Closed&quot;), ISPICKVAL(Status__c, &quot;Active&quot;)), 
OR(  ISBLANK(Existing_ABB_offering__c), ISBLANK(Suppliers_with_potential_ABB_offering__c ), ISBLANK(Suppliers_with_complementary_products__c), ISBLANK(Co_operation_Overview_1__c), ISBLANK(Co_operation_Overview_2__c),  LEN(Training_and_Authorization_Plan__c) &lt; 1, Channel_Market_Coverage__c = NULL, Actions_RollUp__c = 0,JBP_ProdLine_Rollup__c = 0, JBP_MarketCoverage_Rollup__c = 0, JBP_Contact_Role_Rollup__c = 0, ISBLANK( Date_for_Next_Review__c ),ISBLANK( Assigned_To__c ) ) ), 

AND(RecordType.DeveloperName = &quot;Distributor_as_Strategic_Key_Partner&quot;, OR(ISPICKVAL(Status__c, &quot;In Approval&quot;),ISPICKVAL(Status__c, &quot;Closed&quot;), ISPICKVAL(Status__c, &quot;Active&quot;)), 
OR(ISBLANK(Existing_ABB_offering__c), ISBLANK(Suppliers_with_potential_ABB_offering__c ), ISBLANK( Suppliers_with_complementary_products__c), ISBLANK(Co_operation_Overview_1__c), ISBLANK(Co_operation_Overview_2__c), Channel_Market_Coverage__c = NULL, Actions_RollUp__c = 0,JBP_ProdLine_Rollup__c = 0, JBP_MarketCoverage_Rollup__c = 0, JBP_Contact_Role_Rollup__c = 0, ISBLANK(Date_for_Next_Review__c),ISBLANK( Assigned_To__c ))), 

AND(RecordType.DeveloperName =&quot;Distributor_as_Partner&quot;, OR(ISPICKVAL(Status__c, &quot;In Approval&quot;),ISPICKVAL(Status__c, &quot;Closed&quot;), ISPICKVAL(Status__c, &quot;Active&quot;)),  OR( ISBLANK(Existing_ABB_offering__c), ISBLANK(Suppliers_with_potential_ABB_offering__c ), ISBLANK( Suppliers_with_complementary_products__c), ISBLANK(Co_operation_Overview_1__c), ISBLANK(Co_operation_Overview_2__c), Channel_Market_Coverage__c = NULL, Actions_RollUp__c = 0,JBP_ProdLine_Rollup__c = 0,JBP_Contact_Role_Rollup__c = 0 , ISBLANK( Date_for_Next_Review__c ),ISBLANK( Assigned_To__c )) ), 

AND(RecordType.DeveloperName =&quot;Technical_Channel_as_Partner&quot;, OR(ISPICKVAL(Status__c, &quot;In Approval&quot;),ISPICKVAL(Status__c, &quot;Closed&quot;), ISPICKVAL(Status__c, &quot;Active&quot;)),
OR(ISBLANK(Existing_ABB_offering__c), ISBLANK(Suppliers_with_potential_ABB_offering__c ), ISBLANK( Suppliers_with_complementary_products__c), ISBLANK(Co_operation_Overview_1__c), ISBLANK(Co_operation_Overview_2__c), Channel_Market_Coverage__c = NULL, Actions_RollUp__c = 0, JBP_Contact_Role_Rollup__c = 0 , JBP_MarketCoverage_Rollup__c = 0, ISBLANK( Date_for_Next_Review__c ),ISBLANK( Assigned_To__c ))) 
)
)</errorConditionFormula>
        <errorMessage>Status cannot be changed as not all Red Flag marked mandatory fields are answered. You might need to change Status back to &quot;Draft&quot; to save and see if Red Flagged fields were missed in earlier stages or related lists.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Joint_Business_Plan_On_Bulk_Accounts</fullName>
        <active>true</active>
        <description>Related Account cannot be Bulk Business.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
 NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
    CONTAINS(LOWER(Account__r.Name), &apos;bulk business&apos;)
)</errorConditionFormula>
        <errorMessage>Related Account cannot be Bulk Business.</errorMessage>
    </validationRules>
</CustomObject>